--- a/ui/package.json
+++ b/ui/package.json
@@ -19,8 +19,8 @@
     "start": "npm run dev",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --display-error-details --progress --colors --config webpack.dev.js",
-    "eslint": "eslint --ext .js --ext .jsx src/",
-    "test": "echo"
+    "eslint": "eslint --ext .js --ext .jsx src/ tests/",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,12 +38,15 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-preset-airbnb": "^3.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -54,7 +57,9 @@
     "eslint-plugin-react-redux": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "interpolate-html-plugin": "^3.0.0",
+    "jest": "^24.5.0",
     "prettier": "^1.16.4",
+    "redux-mock-store": "^1.5.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
