--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,18 @@ services:
       - 'no-new-privileges'
     pids_limit: 100
     tmpfs: ['/tmp']
+    depends_on: db
     environment:
       GIN_MODE: release
       ASG_ID: ""
       ASG_SECRET: ""
       VAULT_ADDR: ""
       VAULT_TOKEN: ""
+      POSTGRES_USER: nopas
+      POSTGRES_DB: nopas
+      POSTGRES_PASSWORD: nopas
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
 
   ui:
     build: ./ui
@@ -25,3 +31,10 @@ services:
       REACT_APP_NOPAS_ENDPOINT: "http://localhost:8080"
     ports:
       - 5000:5000
+    
+  db:
+    image: postgres:9.6.11
+    environment:
+      POSTGRES_USER: nopas
+      POSTGRES_DB: nopas
+      POSTGRES_PASSWORD: nopas
