--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,13 @@ env:
 
 before_deploy:
   - docker login ${DOCKER_REGISTRY} -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
+  - docker build . -t ${IMAGE_NAME}:${TRAVIS_TAG}
+  - docker build . -t ${UI_IMAGE_NAME}:${TRAVIS_TAG} -f ui/Dockerfile
 
 deploy:
   provider: script
   skip_cleanup: true # Important, otherwise the build output would be purged.
   script:
-    - docker build . -t ${IMAGE_NAME}:${TRAVIS_TAG}
-    - docker push ${IMAGE_NAME}:${TRAVIS_TAG}
-    - cd ui/
-    - docker build . -t ${UI_IMAGE_NAME}:${TRAVIS_TAG}
-    - docker push ${UI_IMAGE_NAME}:${TRAVIS_TAG}
+    - docker push ${IMAGE_NAME}:${TRAVIS_TAG} && docker push ${UI_IMAGE_NAME}:${TRAVIS_TAG}
   on:
     tags: true # The deployment happens only if the commit has a tag.
