--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+env:
+  global:
+  - IMAGE_NAME=${DOCKER_REGISTRY}/dsaid/datagovsg/nopas
+  - UI_IMAGE_NAME=${DOCKER_REGISTRY}/dsaid/datagovsg/nopas-ui
 
 matrix:
   include:
@@ -5,6 +9,17 @@ matrix:
       go: 1.11.x      
       script: 
         - go test -v ./...
+      before_deploy:
+        - docker login ${DOCKER_REGISTRY} -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
+        - docker build . -t ${IMAGE_NAME}:${TRAVIS_TAG}
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+          - docker push ${IMAGE_NAME}:${TRAVIS_TAG}
+        on:
+          tags: true
+
     - language: node_js
       node_js: "10"
       install:
@@ -12,21 +27,13 @@ matrix:
         - npm install
       script:
         - npm test
-
-env:
-  global:
-  - IMAGE_NAME=${DOCKER_REGISTRY}/dsaid/datagovsg/nopas
-  - UI_IMAGE_NAME=${DOCKER_REGISTRY}/dsaid/datagovsg/nopas-ui
-
-before_deploy:
-  - docker login ${DOCKER_REGISTRY} -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
-  - docker build . -t ${IMAGE_NAME}:${TRAVIS_TAG}
-  - docker build . -t ${UI_IMAGE_NAME}:${TRAVIS_TAG} -f ui/Dockerfile
-
-deploy:
-  provider: script
-  skip_cleanup: true # Important, otherwise the build output would be purged.
-  script:
-    - docker push ${IMAGE_NAME}:${TRAVIS_TAG} && docker push ${UI_IMAGE_NAME}:${TRAVIS_TAG}
-  on:
-    tags: true # The deployment happens only if the commit has a tag.
+      before_deploy:
+        - docker login ${DOCKER_REGISTRY} -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
+        - docker build . -t ${UI_IMAGE_NAME}:${TRAVIS_TAG}
+      deploy:
+        provider: script
+        skip_cleanup: true
+        script:
+          - docker push ${UI_IMAGE_NAME}:${TRAVIS_TAG}
+        on:
+          tags: true
