--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
+    "flow": "flow",
     "start": "npm run dev",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --display-error-details --progress --colors --config webpack.dev.js",
@@ -32,7 +33,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-flow": "^7.0.0",
@@ -55,6 +57,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-redux": "^3.0.1",
+    "flow-bin": "^0.103.0",
     "html-webpack-plugin": "^3.2.0",
     "interpolate-html-plugin": "^3.0.0",
     "jest": "^24.5.0",
