--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
+    "flow": "flow",
     "start": "npm run dev",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --display-error-details --progress --colors --config webpack.dev.js",
@@ -32,7 +33,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-flow": "^7.0.0",
@@ -47,14 +49,16 @@
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-flowtype": "^3.12.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-redux": "^3.0.1",
+    "flow-bin": "^0.103.0",
     "html-webpack-plugin": "^3.2.0",
     "interpolate-html-plugin": "^3.0.0",
     "jest": "^24.5.0",
