Introduce react hook eslint
Add ignore line for useEffect w empty dep arr

Bump lodash from 4.17.11 to 4.17.13 in /ui

Bumps [lodash](https://github.com/lodash/lodash) from 4.17.11 to 4.17.13.
- [Release notes](https://github.com/lodash/lodash/releases)
- [Commits](https://github.com/lodash/lodash/compare/4.17.11...4.17.13)

Signed-off-by: dependabot[bot] <support@github.com>

Remove stuff

--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -20,7 +20,8 @@
     "react-redux",
     "prettier",
     "jsx-a11y",
-    "flowtype"
+    "flowtype",
+    "react-hooks"
   ],
 
   "extends": [
@@ -43,6 +44,8 @@
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/mouse-events-have-key-events": 0,
     "flowtype/define-flow-type": 1,
-    "flowtype/use-flow-type": 1
+    "flowtype/use-flow-type": 1,
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
