--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "serve": "^10.1.2",
+    "sinon": "^7.4.0",
     "webpack-dev-server": "^3.2.1"
   },
   "scripts": {
@@ -33,6 +34,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "<rootDir>/jest.mocks.js"
+    }
+  },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
