--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -5,7 +5,7 @@ on:
   push:
     # branches to consider in the event; optional, defaults to all
     branches:
-      - develop
+      - master
 
 jobs:
   update_draft_release:
